# vogue-e-grafos

./: 01_vazio.py  02_trivial.py  03_conexo.py  04_desconexo.py  05_completo.py  06_incompleto.py  07_laco.py  08_direcionado.py  09_arvore.py  10_poses.py  11_automato.py  12_poses.py  pyproject.toml
