[tool.poetry]
name = "grafos"
version = "0.1.0"
description = ""
authors = ["Alynne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
matplotlib = "^3.7.1"
tk = "^0.1.0"
pydot = "^1.4.2"
automata = "^0.1.4"
automata-lib = "^8.0.0"
visual-automata = "^1.1.1"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
